[gd_scene load_steps=19 format=2]

[ext_resource path="res://Images/Menu/1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Menu/MenuBG.gd" type="Script" id=2]
[ext_resource path="res://Images/Menu/StartButtonPressed1.png" type="Texture" id=3]
[ext_resource path="res://Images/Menu/StartButton.png" type="Texture" id=4]
[ext_resource path="res://Images/Menu/StartButtonHover.png" type="Texture" id=5]
[ext_resource path="res://Images/Menu/To.png" type="Texture" id=6]
[ext_resource path="res://Images/Menu/Hero.png" type="Texture" id=7]
[ext_resource path="res://Images/Menu/Zero.png" type="Texture" id=8]
[ext_resource path="res://Images/Menu/QuitButtonHover.png" type="Texture" id=9]
[ext_resource path="res://Images/Menu/QuitButton.png" type="Texture" id=10]
[ext_resource path="res://Images/Menu/QuitButtonPressed1.png" type="Texture" id=11]
[ext_resource path="res://Images/Menu/Settings_TestHoverSmaller.png" type="Texture" id=12]
[ext_resource path="res://Images/Menu/Settings_TestPressedSmaller.png" type="Texture" id=13]
[ext_resource path="res://Images/Menu/Settings_TestWhiteSmaller.png" type="Texture" id=14]
[ext_resource path="res://Sons/confirmation_001.ogg" type="AudioStream" id=15]
[ext_resource path="res://Sons/Menusound.mp3" type="AudioStream" id=16]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment() {
	vec2 shifteduv = UV;
	shifteduv.x += TIME * scroll_speed;
	vec4 col = texture(TEXTURE,shifteduv);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = null

[node name="Node2D" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_scale = Vector2( 0.533, 0.556 )
texture = ExtResource( 1 )
stretch_mode = 2
script = ExtResource( 2 )

[node name="Botton" type="AudioStreamPlayer2D" parent="TextureRect"]
position = Vector2( 0, 0.000109775 )
scale = Vector2( 1.87617, 1.79856 )
stream = ExtResource( 15 )

[node name="Zero" type="Sprite" parent="TextureRect"]
position = Vector2( 735.46, 143.885 )
scale = Vector2( 1.03858, 1.06748 )
texture = ExtResource( 8 )

[node name="To" type="Sprite" parent="TextureRect/Zero"]
position = Vector2( 600.375, 1.52588e-05 )
texture = ExtResource( 6 )

[node name="Hero" type="Sprite" parent="TextureRect/Zero"]
position = Vector2( 205.938, 286.427 )
texture = ExtResource( 7 )

[node name="MenuSound" type="AudioStreamPlayer2D" parent="TextureRect"]
scale = Vector2( 1.87617, 1.79856 )
stream = ExtResource( 16 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 424.0
margin_top = 392.0
margin_right = 750.0
margin_bottom = 736.0
rect_scale = Vector2( 0.567729, 0.58598 )

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 326.0
margin_bottom = 170.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="QuitButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 174.0
margin_right = 326.0
margin_bottom = 344.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 9 )

[node name="SettingsButton" type="TextureButton" parent="."]
margin_left = 928.0
margin_top = 18.0
margin_right = 1178.0
margin_bottom = 268.0
rect_scale = Vector2( 0.29046, 0.300232 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 12 )

[connection signal="button_up" from="VBoxContainer/StartButton" to="TextureRect" method="_on_StartButton_button_up"]
[connection signal="button_up" from="VBoxContainer/QuitButton" to="TextureRect" method="_on_QuitButton_button_up"]
[connection signal="pressed" from="SettingsButton" to="TextureRect" method="_on_SettingsButton_pressed"]
